--- a/.gitignore
+++ b/.gitignore
@@ -112,6 +112,8 @@ venv.bak/
 .idea/**/workspace.xml
 .idea/**/tasks.xml
 .idea/dictionaries
+.idea/misc.xml
+.idea/distributed-systems.iml
 
 # Sensitive or high-churn files:
 .idea/**/dataSources/
